--- a/ThBOT_Mainboard.ioc
+++ b/ThBOT_Mainboard.ioc
@@ -1,47 +1,73 @@
 #MicroXplorer Configuration settings - do not modify
+FREERTOS.FootprintOK=true
+FREERTOS.IPParameters=Tasks01,configTICK_RATE_HZ,FootprintOK
+FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL
+FREERTOS.configTICK_RATE_HZ=100
 File.Version=6
 KeepUserPlacement=true
 Mcu.Family=STM32F4
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IPNb=3
+Mcu.IP0=FREERTOS
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=TIM2
+Mcu.IP5=TIM3
+Mcu.IP6=TIM4
+Mcu.IP7=TIM5
+Mcu.IPNb=8
 Mcu.Name=STM32F446Z(C-E)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA8
-Mcu.Pin11=PA9
-Mcu.Pin12=PA10
-Mcu.Pin13=PA11
-Mcu.Pin14=PA12
-Mcu.Pin15=PA13
-Mcu.Pin16=PA14
-Mcu.Pin17=PB7
-Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin10=PB14
+Mcu.Pin11=PD8
+Mcu.Pin12=PD9
+Mcu.Pin13=PD12
+Mcu.Pin14=PG6
+Mcu.Pin15=PG7
+Mcu.Pin16=PA8
+Mcu.Pin17=PA9
+Mcu.Pin18=PA10
+Mcu.Pin19=PA11
 Mcu.Pin2=PC15-OSC32_OUT
+Mcu.Pin20=PA12
+Mcu.Pin21=PA13
+Mcu.Pin22=PA14
+Mcu.Pin23=PB3
+Mcu.Pin24=PB7
+Mcu.Pin25=VP_FREERTOS_VS_ENABLE
+Mcu.Pin26=VP_SYS_VS_tim1
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin5=PB14
-Mcu.Pin6=PD8
-Mcu.Pin7=PD9
-Mcu.Pin8=PG6
-Mcu.Pin9=PG7
-Mcu.PinsNb=19
+Mcu.Pin5=PA0-WKUP
+Mcu.Pin6=PA1
+Mcu.Pin7=PA5
+Mcu.Pin8=PA6
+Mcu.Pin9=PB0
+Mcu.PinsNb=27
 Mcu.UserConstants=
 Mcu.UserName=STM32F446ZETx
 MxCube.Version=4.23.0
 MxDb.Version=DB.4.0.230
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false\:true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false\:true
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:false\:true
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:false\:true
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:true
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false\:false\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false\:false\:true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false\:false\:true
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:false\:false\:true
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:false\:false\:true
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:true
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:true
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false\:true
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:true
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:true
+NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.TimeBase=TIM1_UP_TIM10_IRQn
+NVIC.TimeBaseIP=TIM1
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false\:false\:true
+PA0-WKUP.GPIOParameters=GPIO_Label
+PA0-WKUP.GPIO_Label=ENCA_R
+PA0-WKUP.Signal=S_TIM5_CH1
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=ENCB_R
+PA1.Signal=S_TIM5_CH2
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=USB_ID
 PA10.Locked=true
@@ -62,6 +88,12 @@ PA14.GPIOParameters=GPIO_Label
 PA14.GPIO_Label=TCK
 PA14.Locked=true
 PA14.Signal=SYS_JTCK-SWCLK
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=ENCA_L
+PA5.Signal=S_TIM2_CH1_ETR
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=PWM_L
+PA6.Signal=S_TIM3_CH1
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=USB_SOF [TP1]
 PA8.Locked=true
@@ -70,10 +102,17 @@ PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=USB_VBUS
 PA9.Locked=true
 PA9.Signal=USB_OTG_FS_VBUS
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=LD1 [Green]
+PB0.Locked=true
+PB0.Signal=GPIO_Output
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=LD3 [Red]
 PB14.Locked=true
 PB14.Signal=GPIO_Output
+PB3.GPIOParameters=GPIO_Label
+PB3.GPIO_Label=ENCB_L
+PB3.Signal=S_TIM2_CH2
 PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=LD2 [Blue]
 PB7.Locked=true
@@ -94,6 +133,9 @@ PCC.Seq0=0
 PCC.Series=STM32F4
 PCC.Temperature=25
 PCC.Vdd=3.6
+PD12.GPIOParameters=GPIO_Label
+PD12.GPIO_Label=PWM_R
+PD12.Signal=S_TIM4_CH1
 PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=STLK_RX [STM32F103CBT6_PA3]
 PD8.Locked=true
@@ -141,7 +183,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_TIM2_Init-TIM2-false-HAL,4-MX_TIM3_Init-TIM3-false-HAL,5-MX_TIM4_Init-TIM4-false-HAL,6-MX_TIM5_Init-TIM5-false-HAL
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -225,7 +267,35 @@ RCC.VcooutputI2SQ=48000000
 RCC.WatchDogFreq_Value=32000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Encoder_Interface
+SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM2_CH2.0=TIM2_CH2,Encoder_Interface
+SH.S_TIM2_CH2.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
+SH.S_TIM3_CH1.ConfNb=1
+SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
+SH.S_TIM4_CH1.ConfNb=1
+SH.S_TIM5_CH1.0=TIM5_CH1,Encoder_Interface
+SH.S_TIM5_CH1.ConfNb=1
+SH.S_TIM5_CH2.0=TIM5_CH2,Encoder_Interface
+SH.S_TIM5_CH2.ConfNb=1
+TIM2.IC1Polarity=TIM_ICPOLARITY_RISING
+TIM2.IC2Polarity=TIM_ICPOLARITY_RISING
+TIM2.IPParameters=Period,IC1Polarity,IC2Polarity
+TIM2.Period=4294967295
+TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Pulse-PWM Generation1 CH1,Period
+TIM3.Period=65535
+TIM3.Pulse-PWM\ Generation1\ CH1=1
+TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM4.IPParameters=Channel-PWM Generation1 CH1,Pulse-PWM Generation1 CH1,Period
+TIM4.Period=65535
+TIM4.Pulse-PWM\ Generation1\ CH1=1
+TIM5.IPParameters=Period
+TIM5.Period=4294967295
+VP_FREERTOS_VS_ENABLE.Mode=Enabled
+VP_FREERTOS_VS_ENABLE.Signal=FREERTOS_VS_ENABLE
+VP_SYS_VS_tim1.Mode=TIM1
+VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 board=NUCLEO-F446ZE
 boardIOC=true
