--- a/ThBOT_Mainboard.ioc
+++ b/ThBOT_Mainboard.ioc
@@ -62,11 +62,13 @@ NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false\:false\:true
-PA0-WKUP.GPIOParameters=GPIO_Label
+PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA0-WKUP.GPIO_Label=ENCA_R
+PA0-WKUP.GPIO_PuPd=GPIO_PULLUP
 PA0-WKUP.Signal=S_TIM5_CH1
-PA1.GPIOParameters=GPIO_Label
+PA1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA1.GPIO_Label=ENCB_R
+PA1.GPIO_PuPd=GPIO_PULLUP
 PA1.Signal=S_TIM5_CH2
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=USB_ID
@@ -88,8 +90,9 @@ PA14.GPIOParameters=GPIO_Label
 PA14.GPIO_Label=TCK
 PA14.Locked=true
 PA14.Signal=SYS_JTCK-SWCLK
-PA5.GPIOParameters=GPIO_Label
+PA5.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA5.GPIO_Label=ENCA_L
+PA5.GPIO_PuPd=GPIO_PULLUP
 PA5.Signal=S_TIM2_CH1_ETR
 PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=PWM_L
@@ -110,8 +113,9 @@ PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=LD3 [Red]
 PB14.Locked=true
 PB14.Signal=GPIO_Output
-PB3.GPIOParameters=GPIO_Label
+PB3.GPIOParameters=GPIO_PuPd,GPIO_Label
 PB3.GPIO_Label=ENCB_L
+PB3.GPIO_PuPd=GPIO_PULLUP
 PB3.Signal=S_TIM2_CH2
 PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=LD2 [Blue]
