--- a/ThBOT_Mainboard.ioc
+++ b/ThBOT_Mainboard.ioc
@@ -1,55 +1,80 @@
 #MicroXplorer Configuration settings - do not modify
-FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,configTICK_RATE_HZ,FootprintOK
+ADC3.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_4
+ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC3.NbrOfConversionFlag=1
+ADC3.Rank-0\#ChannelRegularConversion=1
+ADC3.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+Dma.Request0=UART5_RX
+Dma.RequestsNb=1
+Dma.UART5_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.UART5_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART5_RX.0.Instance=DMA1_Stream0
+Dma.UART5_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART5_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.UART5_RX.0.Mode=DMA_NORMAL
+Dma.UART5_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART5_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.UART5_RX.0.Priority=DMA_PRIORITY_LOW
+Dma.UART5_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+FREERTOS.IPParameters=Tasks01
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL
-FREERTOS.configTICK_RATE_HZ=100
 File.Version=6
 KeepUserPlacement=true
 Mcu.Family=STM32F4
-Mcu.IP0=FREERTOS
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=TIM2
-Mcu.IP5=TIM3
-Mcu.IP6=TIM4
-Mcu.IP7=TIM5
-Mcu.IPNb=8
+Mcu.IP0=ADC3
+Mcu.IP1=DMA
+Mcu.IP10=UART5
+Mcu.IP2=FREERTOS
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=TIM2
+Mcu.IP7=TIM3
+Mcu.IP8=TIM4
+Mcu.IP9=TIM5
+Mcu.IPNb=11
 Mcu.Name=STM32F446Z(C-E)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB14
-Mcu.Pin11=PD8
-Mcu.Pin12=PD9
-Mcu.Pin13=PD12
-Mcu.Pin14=PG6
-Mcu.Pin15=PG7
-Mcu.Pin16=PA8
-Mcu.Pin17=PA9
-Mcu.Pin18=PA10
-Mcu.Pin19=PA11
+Mcu.Pin10=PA7
+Mcu.Pin11=PB0
+Mcu.Pin12=PG0
+Mcu.Pin13=PE7
+Mcu.Pin14=PE8
+Mcu.Pin15=PB14
+Mcu.Pin16=PD8
+Mcu.Pin17=PD9
+Mcu.Pin18=PD11
+Mcu.Pin19=PD12
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA12
-Mcu.Pin21=PA13
-Mcu.Pin22=PA14
-Mcu.Pin23=PB3
-Mcu.Pin24=PB7
-Mcu.Pin25=VP_FREERTOS_VS_ENABLE
-Mcu.Pin26=VP_SYS_VS_tim1
-Mcu.Pin3=PH0-OSC_IN
-Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin5=PA0-WKUP
-Mcu.Pin6=PA1
-Mcu.Pin7=PA5
-Mcu.Pin8=PA6
-Mcu.Pin9=PB0
-Mcu.PinsNb=27
+Mcu.Pin20=PG6
+Mcu.Pin21=PG7
+Mcu.Pin22=PA8
+Mcu.Pin23=PA9
+Mcu.Pin24=PA10
+Mcu.Pin25=PA11
+Mcu.Pin26=PA12
+Mcu.Pin27=PA13
+Mcu.Pin28=PA14
+Mcu.Pin29=PB3
+Mcu.Pin3=PF6
+Mcu.Pin30=PB7
+Mcu.Pin31=VP_FREERTOS_VS_ENABLE
+Mcu.Pin32=VP_SYS_VS_tim1
+Mcu.Pin4=PH0-OSC_IN
+Mcu.Pin5=PH1-OSC_OUT
+Mcu.Pin6=PA0-WKUP
+Mcu.Pin7=PA1
+Mcu.Pin8=PA5
+Mcu.Pin9=PA6
+Mcu.PinsNb=33
 Mcu.UserConstants=
 Mcu.UserName=STM32F446ZETx
 MxCube.Version=4.23.0
 MxDb.Version=DB.4.0.230
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false\:false\:true
+NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false\:false\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:false\:false\:true
@@ -61,13 +86,14 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:true
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
+NVIC.UART5_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false\:false\:true
-PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA0-WKUP.GPIO_Label=ENCA_R
+PA0-WKUP.GPIOParameters=GPIO_Label,GPIO_PuPd
+PA0-WKUP.GPIO_Label=R_ENC_SIGA
 PA0-WKUP.GPIO_PuPd=GPIO_PULLUP
 PA0-WKUP.Signal=S_TIM5_CH1
-PA1.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA1.GPIO_Label=ENCB_R
+PA1.GPIOParameters=GPIO_Label,GPIO_PuPd
+PA1.GPIO_Label=R_ENC_SIGB
 PA1.GPIO_PuPd=GPIO_PULLUP
 PA1.Signal=S_TIM5_CH2
 PA10.GPIOParameters=GPIO_Label
@@ -85,18 +111,24 @@ PA12.Signal=USB_OTG_FS_DP
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
+PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.GPIOParameters=GPIO_Label
 PA14.GPIO_Label=TCK
 PA14.Locked=true
+PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA5.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA5.GPIO_Label=ENCA_L
+PA5.GPIOParameters=GPIO_Label,GPIO_PuPd
+PA5.GPIO_Label=L_ENC_SIGA
 PA5.GPIO_PuPd=GPIO_PULLUP
 PA5.Signal=S_TIM2_CH1_ETR
 PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=PWM_L
+PA6.GPIO_Label=L_MOT_PWM
 PA6.Signal=S_TIM3_CH1
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=L_MOT_DIR
+PA7.Locked=true
+PA7.Signal=GPIO_Output
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=USB_SOF [TP1]
 PA8.Locked=true
@@ -113,8 +145,8 @@ PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=LD3 [Red]
 PB14.Locked=true
 PB14.Signal=GPIO_Output
-PB3.GPIOParameters=GPIO_PuPd,GPIO_Label
-PB3.GPIO_Label=ENCB_L
+PB3.GPIOParameters=GPIO_Label,GPIO_PuPd
+PB3.GPIO_Label=L_ENC_SIGB
 PB3.GPIO_PuPd=GPIO_PULLUP
 PB3.Signal=S_TIM2_CH2
 PB7.GPIOParameters=GPIO_Label
@@ -137,8 +169,12 @@ PCC.Seq0=0
 PCC.Series=STM32F4
 PCC.Temperature=25
 PCC.Vdd=3.6
+PD11.GPIOParameters=GPIO_Label
+PD11.GPIO_Label=R_MOT_DIR
+PD11.Locked=true
+PD11.Signal=GPIO_Output
 PD12.GPIOParameters=GPIO_Label
-PD12.GPIO_Label=PWM_R
+PD12.GPIO_Label=R_MOT_PWM
 PD12.Signal=S_TIM4_CH1
 PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=STLK_RX [STM32F103CBT6_PA3]
@@ -148,6 +184,23 @@ PD9.GPIOParameters=GPIO_Label
 PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
 PD9.Locked=true
 PD9.Signal=USART3_RX
+PE7.GPIOParameters=GPIO_Label
+PE7.GPIO_Label=UART_LCD_TX
+PE7.Mode=Asynchronous
+PE7.Signal=UART5_RX
+PE8.GPIOParameters=GPIO_Label
+PE8.GPIO_Label=UART_LCD_RX
+PE8.Mode=Asynchronous
+PE8.Signal=UART5_TX
+PF6.GPIOParameters=GPIO_Label
+PF6.GPIO_Label=VBATT
+PF6.Locked=true
+PF6.Mode=IN4
+PF6.Signal=ADC3_IN4
+PG0.GPIOParameters=GPIO_Label
+PG0.GPIO_Label=PWR_IN
+PG0.Locked=true
+PG0.Signal=GPIO_Input
 PG6.GPIOParameters=GPIO_Label
 PG6.GPIO_Label=USB_PowerSwitchOn [STMPS2151STR_EN]
 PG6.Locked=true
@@ -168,7 +221,7 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=true
-ProjectManager.CustomerFirmwarePackage=C\:/Users/J\u00E9r\u00E9my/STM32Cube/Repository/STM32Cube_FW_F4_V1.17.0
+ProjectManager.CustomerFirmwarePackage=/home/r4tk2_d8/STM32Cube/Repository/STM32Cube_FW_F4_V1.17.0
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F446ZETx
@@ -177,7 +230,7 @@ ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=true
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
-ProjectManager.LastFirmware=true
+ProjectManager.LastFirmware=false
 ProjectManager.LibraryCopy=1
 ProjectManager.PreviousToolchain=SW4STM32
 ProjectManager.ProjectBuild=false
@@ -187,7 +240,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-SystemClock_Config-RCC-false-HAL,3-MX_TIM2_Init-TIM2-false-HAL,4-MX_TIM3_Init-TIM3-false-HAL,5-MX_TIM4_Init-TIM4-false-HAL,6-MX_TIM5_Init-TIM5-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-LL,3-SystemClock_Config-RCC-false-HAL,4-MX_TIM2_Init-TIM2-false-HAL,5-MX_TIM3_Init-TIM3-false-HAL,6-MX_TIM4_Init-TIM4-false-HAL,7-MX_TIM5_Init-TIM5-false-HAL,8-MX_UART5_Init-UART5-false-LL,9-MX_ADC3_Init-ADC3-false-HAL
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -297,6 +350,8 @@ TIM4.Period=65535
 TIM4.Pulse-PWM\ Generation1\ CH1=1
 TIM5.IPParameters=Period
 TIM5.Period=4294967295
+UART5.IPParameters=VirtualMode
+UART5.VirtualMode=Asynchronous
 VP_FREERTOS_VS_ENABLE.Mode=Enabled
 VP_FREERTOS_VS_ENABLE.Signal=FREERTOS_VS_ENABLE
 VP_SYS_VS_tim1.Mode=TIM1
