--- a/ThBOT_Mainboard.ioc
+++ b/ThBOT_Mainboard.ioc
@@ -16,7 +16,9 @@ Dma.UART5_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.UART5_RX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.UART5_RX.0.Priority=DMA_PRIORITY_LOW
 Dma.UART5_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-FREERTOS.IPParameters=Tasks01
+FREERTOS.FootprintOK=true
+FREERTOS.INCLUDE_vTaskDelayUntil=1
+FREERTOS.IPParameters=Tasks01,INCLUDE_vTaskDelayUntil,FootprintOK
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL
 File.Version=6
 KeepUserPlacement=true
@@ -342,11 +344,11 @@ TIM2.IPParameters=Period,IC1Polarity,IC2Polarity
 TIM2.Period=4294967295
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.IPParameters=Channel-PWM Generation1 CH1,Pulse-PWM Generation1 CH1,Period
-TIM3.Period=65535
+TIM3.Period=6000
 TIM3.Pulse-PWM\ Generation1\ CH1=1
 TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM4.IPParameters=Channel-PWM Generation1 CH1,Pulse-PWM Generation1 CH1,Period
-TIM4.Period=65535
+TIM4.Period=6000
 TIM4.Pulse-PWM\ Generation1\ CH1=1
 TIM5.IPParameters=Period
 TIM5.Period=4294967295
