--- a/ThBOT_Mainboard.ioc
+++ b/ThBOT_Mainboard.ioc
@@ -4,28 +4,41 @@ ADC3.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConv
 ADC3.NbrOfConversionFlag=1
 ADC3.Rank-0\#ChannelRegularConversion=1
 ADC3.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-Dma.Request0=UART5_RX
-Dma.RequestsNb=1
-Dma.UART5_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.UART5_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.UART5_RX.0.Instance=DMA1_Stream0
-Dma.UART5_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.UART5_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.UART5_RX.0.Mode=DMA_NORMAL
-Dma.UART5_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.UART5_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.UART5_RX.0.Priority=DMA_PRIORITY_LOW
-Dma.UART5_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.Request0=UART4_RX
+Dma.Request1=UART5_RX
+Dma.RequestsNb=2
+Dma.UART4_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.UART4_RX.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART4_RX.0.Instance=DMA1_Stream2
+Dma.UART4_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART4_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.UART4_RX.0.Mode=DMA_NORMAL
+Dma.UART4_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART4_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.UART4_RX.0.Priority=DMA_PRIORITY_LOW
+Dma.UART4_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.UART5_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.UART5_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.UART5_RX.1.Instance=DMA1_Stream0
+Dma.UART5_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.UART5_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.UART5_RX.1.Mode=DMA_NORMAL
+Dma.UART5_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.UART5_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.UART5_RX.1.Priority=DMA_PRIORITY_LOW
+Dma.UART5_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 FREERTOS.FootprintOK=true
 FREERTOS.INCLUDE_vTaskDelayUntil=1
-FREERTOS.IPParameters=Tasks01,INCLUDE_vTaskDelayUntil,FootprintOK
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL
+FREERTOS.IPParameters=Tasks01,INCLUDE_vTaskDelayUntil,FootprintOK,configMINIMAL_STACK_SIZE
+FREERTOS.Tasks01=defaultTask,0,256,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
+FREERTOS.configMINIMAL_STACK_SIZE=128
 File.Version=6
 KeepUserPlacement=true
 Mcu.Family=STM32F4
 Mcu.IP0=ADC3
 Mcu.IP1=DMA
-Mcu.IP10=UART5
+Mcu.IP10=UART4
+Mcu.IP11=UART5
 Mcu.IP2=FREERTOS
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
@@ -34,7 +47,7 @@ Mcu.IP6=TIM2
 Mcu.IP7=TIM3
 Mcu.IP8=TIM4
 Mcu.IP9=TIM5
-Mcu.IPNb=11
+Mcu.IPNb=12
 Mcu.Name=STM32F446Z(C-E)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -59,24 +72,27 @@ Mcu.Pin25=PA11
 Mcu.Pin26=PA12
 Mcu.Pin27=PA13
 Mcu.Pin28=PA14
-Mcu.Pin29=PB3
+Mcu.Pin29=PC10
 Mcu.Pin3=PF6
-Mcu.Pin30=PB7
-Mcu.Pin31=VP_FREERTOS_VS_ENABLE
-Mcu.Pin32=VP_SYS_VS_tim1
+Mcu.Pin30=PC11
+Mcu.Pin31=PB3
+Mcu.Pin32=PB7
+Mcu.Pin33=VP_FREERTOS_VS_ENABLE
+Mcu.Pin34=VP_SYS_VS_tim1
 Mcu.Pin4=PH0-OSC_IN
 Mcu.Pin5=PH1-OSC_OUT
 Mcu.Pin6=PA0-WKUP
 Mcu.Pin7=PA1
 Mcu.Pin8=PA5
 Mcu.Pin9=PA6
-Mcu.PinsNb=33
+Mcu.PinsNb=35
 Mcu.UserConstants=
 Mcu.UserName=STM32F446ZETx
 MxCube.Version=4.23.0
 MxDb.Version=DB.4.0.230
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:false\:false\:true
 NVIC.DMA1_Stream0_IRQn=true\:5\:0\:false\:false\:true\:true\:false
+NVIC.DMA1_Stream2_IRQn=true\:5\:0\:false\:false\:true\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:false\:false\:true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:false\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:false\:false\:true
@@ -88,6 +104,7 @@ NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:true
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.TimeBase=TIM1_UP_TIM10_IRQn
 NVIC.TimeBaseIP=TIM1
+NVIC.UART4_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.UART5_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:false\:false\:true
 PA0-WKUP.GPIOParameters=GPIO_Label,GPIO_PuPd
@@ -155,6 +172,14 @@ PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=LD2 [Blue]
 PB7.Locked=true
 PB7.Signal=GPIO_Output
+PC10.GPIOParameters=GPIO_Label
+PC10.GPIO_Label=DBG_UART_RX
+PC10.Mode=Asynchronous
+PC10.Signal=UART4_TX
+PC11.GPIOParameters=GPIO_Label
+PC11.GPIO_Label=DBG_UART_TX
+PC11.Mode=Asynchronous
+PC11.Signal=UART4_RX
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=USER_Btn [B1]
 PC13.Locked=true
@@ -242,7 +267,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-LL,3-SystemClock_Config-RCC-false-HAL,4-MX_TIM2_Init-TIM2-false-HAL,5-MX_TIM3_Init-TIM3-false-HAL,6-MX_TIM4_Init-TIM4-false-HAL,7-MX_TIM5_Init-TIM5-false-HAL,8-MX_UART5_Init-UART5-false-LL,9-MX_ADC3_Init-ADC3-false-HAL
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL,2-MX_DMA_Init-DMA-false-LL,3-SystemClock_Config-RCC-false-HAL,4-MX_TIM2_Init-TIM2-false-HAL,5-MX_TIM3_Init-TIM3-false-HAL,6-MX_TIM4_Init-TIM4-false-HAL,7-MX_TIM5_Init-TIM5-false-HAL,8-MX_UART5_Init-UART5-false-LL,9-MX_ADC3_Init-ADC3-false-HAL,10-MX_UART4_Init-UART4-false-LL
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -344,14 +369,16 @@ TIM2.IPParameters=Period,IC1Polarity,IC2Polarity
 TIM2.Period=4294967295
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.IPParameters=Channel-PWM Generation1 CH1,Pulse-PWM Generation1 CH1,Period
-TIM3.Period=6000
+TIM3.Period=1000
 TIM3.Pulse-PWM\ Generation1\ CH1=1
 TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM4.IPParameters=Channel-PWM Generation1 CH1,Pulse-PWM Generation1 CH1,Period
-TIM4.Period=6000
+TIM4.Period=1000
 TIM4.Pulse-PWM\ Generation1\ CH1=1
 TIM5.IPParameters=Period
 TIM5.Period=4294967295
+UART4.IPParameters=VirtualMode
+UART4.VirtualMode=Asynchronous
 UART5.IPParameters=VirtualMode
 UART5.VirtualMode=Asynchronous
 VP_FREERTOS_VS_ENABLE.Mode=Enabled
